estrutura de pastas e pagina de login

--- a/codigo/index.html
+++ b/codigo/index.html
@@ -1,11 +1,33 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="assets/css/login.css">
+    <title>Login</title>
 </head>
+
 <body>
-    
+    <div class="container">
+        <div class="left-section">
+            <img src="assets/images/PUC 1.png" alt="Logo">
+        </div>
+        <div class="right-section">
+            <div class="login-form">
+                <h2>Conecte-se!</h2>
+                <form action="#" method="post">
+                    <div class="form-group">
+                        <input type="email" id="Email" name="Senha" placeholder="Email" required>
+                    </div>
+                    <div class="form-group">
+                        <input type="password" id="Senha" name="Senha" placeholder="Senha" required>
+                    </div>
+                    <button type="submit">Entrar</button>
+                </form>
+            </div>
+        </div>
+    </div>
 </body>
+
 </html>
