--- a/codigo/index.html
+++ b/codigo/index.html
@@ -4,12 +4,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
+        integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
+        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
+        crossorigin="anonymous"></script>
     <link rel="stylesheet" href="assets/css/login.css">
     <title>Login</title>
+
 </head>
 
 <body>
-    <div class="container">
+    <div class="container-id">
         <div class="left-section">
             <img src="assets/images/PUC 1.png" alt="Logo">
         </div>
@@ -18,10 +24,16 @@
                 <h2>Conecte-se!</h2>
                 <form action="#" method="post">
                     <div class="form-group">
-                        <input type="email" id="Email" name="Senha" placeholder="Email" required>
+                        <input type="email" id="Email" name="Senha" placeholder="Matricula" required>
                     </div>
                     <div class="form-group">
                         <input type="password" id="Senha" name="Senha" placeholder="Senha" required>
+                        <select class="form-select" aria-label="Default select example">
+                            <option selected>Perfil</option>
+                            <option value="1">Administração</option>
+                            <option value="2">Professor</option>
+                            <option value="3">Alunos</option>
+                        </select>
                     </div>
                     <button type="submit">Entrar</button>
                 </form>
