--- a/codigo/pages/adm/cadastro_pessoas.html
+++ b/codigo/pages/adm/cadastro_pessoas.html
@@ -25,7 +25,8 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active text-light" aria-current="page" href="#">Cadastro de Disciplina</a>
+                            <a class="nav-link active text-light" aria-current="page" href="#">Cadastro de
+                                Disciplina</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active text-light" href="#">Cadastro de Aula</a>
@@ -40,13 +41,54 @@
                             <a class="nav-link active text-light" href="#">Disciplina</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-light" href="#">Sair <i class="bi bi-box-arrow-right"></i></a>
+                            <a class="nav-link active text-light" href="#">Sair <i
+                                    class="bi bi-box-arrow-right"></i></a>
                         </li>
                     </ul>
                 </div>
             </div>
         </nav>
     </header>
+    <section class="container">
+        <div class="row">
+            <p class="text-center h2 p-5">Cdastro de pessoas</p>
+            <div class="col-6">
+                <div class="form-floating rounded border border-dark mb-3">
+                    <input type="text" class="form-control" id="floatingInput" placeholder="Nome">
+                    <label for="floatingInput">Nome</label>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="form-floating rounded border border-dark mb-3">
+                    <input type="text" class="form-control" id="floatingInput" placeholder="Matricula">
+                    <label for="floatingInput">Matricula</label>
+                </div>
+            </div>
+            <div class="col-2">
+                <div class="form-floating rounded border border-dark mb-3">
+                    <input type="password" class="form-control" id="floatingInput" placeholder="Senha">
+                    <label for="floatingInput">Senha</label>
+                </div>
+            </div>
+            <div class="col-2"><!-- CORRIGIR APARENCIA DO BOTAL -->
+                <select class="form-select rounded border border-dark" aria-label="Default select example">
+                    <option selected>Perfil</option>
+                    <option value="1">Administração</option>
+                    <option value="2">Professor</option>
+                    <option value="3">Alunos</option>
+                </select>
+            </div>
+            <div class="d-flex justify-content-end">
+                <input class="btn btn-primary" type="submit" value="Salvar">
+            </div>
+        </div>
+    </section>
+    <section>
+        <div class="d-flex justify-content-end container">
+            <a class="btn btn-primary mt-5" href="#" role="button">Next</a>
+        </div>
+    </section>
+
     <footer class="bg-primary fixed-bottom">
         <div class="container">
             <p class="text-center mt-3 text-light">© 2024 Company, Inc, By Puc Chek</p>
