Feito todas estrutura da paginas faltando o Javascript para funcionar

--- a/codigo/pages/adm/cadastro_disciplina.html
+++ b/codigo/pages/adm/cadastro_disciplina.html
@@ -55,49 +55,31 @@
     </header>
     <section class="container">
         <div class="row">
-            <p class="text-center h2 p-5">Cadastro de pessoas</p>
-            <div class="col-10">
-                <div class="input-group ">
-                    <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
-                        placeholder="Nome" aria-label="Username" aria-describedby="basic-addon1">
-                    <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
-                        placeholder="Matricula" aria-label="Username" aria-describedby="basic-addon1">
-                    <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
-                        placeholder="Senha" aria-label="Username" aria-describedby="basic-addon1">
-                </div>
+            <p class="text-center h2 p-5">Cadastro de Disciplina</p>
+            <div class="input-group ">
+                <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3" placeholder="Nome da materia" aria-label="Username"
+                    aria-describedby="basic-addon1">
+                <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3" placeholder="Codigo da maeria" aria-label="Username"
+                    aria-describedby="basic-addon1">
             </div>
-            <div class="col-2">
-                <select class="form-select rounded border border-dark m-1 p-2" aria-label="Default select example">
-                    <option selected>Perfil</option>
-                    <option value="1">Administração</option>
-                    <option value="2">Professor</option>
-                    <option value="3">Alunos</option>
-                </select>
-                <div class="d-flex mt-5 justify-content-end">
-                    <input class="btn btn-primary" type="submit" value="Salvar">
-                </div>
+            <div class="d-flex justify-content-end mt-5">
+                <input class="btn btn-primary" type="submit" value="Salvar">
             </div>
+        </div>
     </section>
     <section>
         <div class="d-flex justify-content-end container">
             <a class="btn btn-primary mt-5" href="#" role="button">Next</a>
         </div>
     </section>
-
     <footer class="bg-primary fixed-bottom">
         <div class="container">
             <p class="text-center mt-3 text-light">© 2024 Company, Inc, By Puc Chek</p>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
 </body>
 
 </html>
