--- a/codigo/pages/adm/cadastro_turma.html
+++ b/codigo/pages/adm/cadastro_turma.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <link rel="stylesheet" href="http://code.jquery.com/ui/1.9.0/themes/base/jquery-ui.css" />
 </head>
 
 <body>
@@ -55,35 +56,61 @@
     </header>
     <section class="container">
         <div class="row">
-            <p class="text-center h2 p-5">Cadastro de pessoas</p>
-            <div class="col-10">
-                <div class="input-group ">
-                    <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
-                        placeholder="Nome" aria-label="Username" aria-describedby="basic-addon1">
-                    <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
-                        placeholder="Matricula" aria-label="Username" aria-describedby="basic-addon1">
-                    <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
-                        placeholder="Senha" aria-label="Username" aria-describedby="basic-addon1">
-                </div>
-            </div>
-            <div class="col-2">
-                <select class="form-select rounded border border-dark m-1 p-2" aria-label="Default select example">
-                    <option selected>Perfil</option>
-                    <option value="1">Administração</option>
-                    <option value="2">Professor</option>
-                    <option value="3">Alunos</option>
+            <p class="text-center h2 p-5">Cadastro de Turma</p>
+            <div class="col-3">
+                <select class="form-select col-3 rounded border-dark m-1 p-2" aria-label="Default select example">
+                    <option selected>Codigo da materia</option>
+                    <option value="1">COMP101</option>
+                    <option value="2">COMP201</option>
+                    <option value="3">COMP301</option>
+                    <option value="4">MATH101</option>
                 </select>
-                <div class="d-flex mt-5 justify-content-end">
-                    <input class="btn btn-primary" type="submit" value="Salvar">
+            </div>
+            <div class="col-3">
+                <select class="form-select col-3 rounded border-dark m-1 p-2" aria-label="Default select example">
+                    <option selected>Codigo da materia</option>
+                    <option value="1">COMP101</option>
+                    <option value="2">COMP201</option>
+                    <option value="3">COMP301</option>
+                    <option value="4">MATH101</option>
+                </select>
+            </div>
+            <div class="col-3">
+                <select class="form-select col-3 rounded border-dark m-1 p-2" aria-label="Default select example">
+                    <option selected>Professor</option>
+                    <option value="1">Dr. João Silva</option> <!-- Ficaria value="COMP101" sera? -->
+                    <option value="2">Dra. Maria Santos</option>
+                    <option value="3">Dr. Pedro Almeida</option>
+                    <option value="3">Prof. Ana Oliveira</option>
+                </select>
+            </div>
+            <div class="col-3">
+                <div class="input-group rounded border border-dark mt-1">
+                    <label for="data" class="input-group-text" id="basic-addon1">Data:</label>
+                    <input type="date" id="data" name="data" class="form-control" required>
                 </div>
             </div>
-    </section>
-    <section>
-        <div class="d-flex justify-content-end container">
-            <a class="btn btn-primary mt-5" href="#" role="button">Next</a>
+            <div class="col-3">
+                <ul class="list-group mt-2 p-1">
+                    <li class="list-group-item">
+                        <strong>
+                            <p class="text-center m-0">Alunos</p>
+                        </strong>
+                    </li>
+                    <li class="list-group-item"> <!-- AJUDA -->
+                        <input class="form-check-input me-1" type="checkbox" value="" id="firstCheckbox">
+                        <label class="form-check-label" for="firstCheckbox">Alunos</label>
+                    </li>
+                </ul>
+            </div>
+            <div class="d-flex mt-5 justify-content-end">
+                <input class="btn btn-primary" type="submit" value="Salvar">
+            </div>
+            <div class="d-flex justify-content-end container">
+                <a class="btn btn-primary mt-5" href="#" role="button">Next</a>
+            </div>
         </div>
     </section>
-
     <footer class="bg-primary fixed-bottom">
         <div class="container">
             <p class="text-center mt-3 text-light">© 2024 Company, Inc, By Puc Chek</p>
@@ -98,6 +125,16 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
+    <script src="http://code.jquery.com/jquery-1.8.2.js"></script>
+    <script src="http://code.jquery.com/ui/1.9.0/jquery-ui.js"></script>
+    <script>
+        const data = document.getElementById('data').value;
+        const celulaData = novaLinha.insertCell(0);
+        celulaData.textContent = data;
+        botaoEditar.onclick = function () {
+            document.getElementById('data').value = data;
+        };
+    </script><!-- COLOCA SERPARADO -->
 </body>
 
 </html>
