--- a/codigo/pages/adm/listagem_alunos.html
+++ b/codigo/pages/adm/listagem_alunos.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puc Chek - Cadastro</title>
+    <title>Puc-Check</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
-<body>
+<body onload="listaProfessores()">
     <header>
         <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container">
@@ -53,42 +53,86 @@
             </div>
         </nav>
     </header>
-    <section class="container">
-        <div class="row">
-            <p class="text-center h2 p-5">Cadastro de pessoas</p>
-            <div class="col-10">
-                <div class="input-group ">
-                    <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
-                        placeholder="Nome" aria-label="Username" aria-describedby="basic-addon1">
-                    <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
-                        placeholder="Matricula" aria-label="Username" aria-describedby="basic-addon1">
-                    <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
-                        placeholder="Senha" aria-label="Username" aria-describedby="basic-addon1">
+    <div class="container mt-4">
+        <h2 class="h2 text-center p-5">Listagem de Alunos</h2>
+
+        <table class="table" id="grid-professores">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Nome</th>
+                    <th>Matrícula</th>
+                    <th>Ações</th>
+                </tr>
+            </thead>
+            <tbody id="table-professores">
+
+            </tbody>
+        </table>
+    </div>
+
+    <div class="modal fade" id="addProfessorModal" tabindex="-1" aria-labelledby="addProfessorModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addProfessorModalLabel">Adicionar Professor</h5>
                 </div>
+                <form id="form-add-professor" onsubmit="createProfessor()">
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="nome-professor">Nome:</label>
+                            <input type="text" class="form-control" id="nome-professor" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="matricula-professor">Matrícula:</label>
+                            <input type="text" class="form-control" id="matricula-professor" required>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Adicionar</button>
+                    </div>
+                </form>
             </div>
-            <div class="col-2">
-                <select class="form-select rounded border border-dark m-1 p-2" aria-label="Default select example">
-                    <option selected>Perfil</option>
-                    <option value="1">Administração</option>
-                    <option value="2">Professor</option>
-                    <option value="3">Alunos</option>
-                </select>
-                <div class="d-flex mt-5 justify-content-end">
-                    <input class="btn btn-primary" type="submit" value="Salvar">
-                </div>
-            </div>
-    </section>
-    <section>
-        <div class="d-flex justify-content-end container">
-            <a class="btn btn-primary mt-5" href="#" role="button">Next</a>
         </div>
-    </section>
+    </div>
+
+    <div class="modal fade" id="editProfessorModal" tabindex="-1" aria-labelledby="editProfessorModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editProfessorModalLabel">Editar Professor</h5>
+                </div>
+                <form id="form-edit-professor" onsubmit="updateProfessor()">
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="edit-id-professor">ID:</label>
+                            <input type="text" class="form-control" id="edit-id-professor" required readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="edit-nome-professor">Nome:</label>
+                            <input type="text" class="form-control" id="edit-nome-professor" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="edit-matricula-professor">Matrícula:</label>
+                            <input type="text" class="form-control" id="edit-matricula-professor" required>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Salvar Alterações</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
 
     <footer class="bg-primary fixed-bottom">
         <div class="container">
             <p class="text-center mt-3 text-light">© 2024 Company, Inc, By Puc Chek</p>
         </div>
     </footer>
+
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
         crossorigin="anonymous"></script>
@@ -98,6 +142,8 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
+    <script src="../../assets/json/alunos.js"></script>
+    <script src="../../assets/js/alunos.js"></script>
 </body>
 
 </html>
