--- a/codigo/pages/adm/listagem_disciplinas.html
+++ b/codigo/pages/adm/listagem_disciplinas.html
@@ -4,13 +4,13 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Puc Chek - Cadastro</title>
+    <title>Puc-Check</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
 </head>
 
-<body>
+<body onload="listaProfessores()">
     <header>
         <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container">
@@ -53,51 +53,70 @@
             </div>
         </nav>
     </header>
-    <section class="container">
-        <div class="row">
-            <p class="text-center h2 p-5">Cadastro de pessoas</p>
-            <div class="col-10">
-                <div class="input-group ">
-                    <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
-                        placeholder="Nome" aria-label="Username" aria-describedby="basic-addon1">
-                    <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
-                        placeholder="Matricula" aria-label="Username" aria-describedby="basic-addon1">
-                    <input type="text" class="form-control m-1 p-2 rounded border border-dark mb-3"
-                        placeholder="Senha" aria-label="Username" aria-describedby="basic-addon1">
+    <div class="container mt-4">
+        <h2>Listagem de Disciplinas</h2>
+
+        <button class="btn btn-primary mb-3" data-bs-toggle="modal" data-bs-target="#addDisciplinaModal">Adicionar
+            Disciplina</button>
+        <table class="table" id="grid-disciplinas">
+            <thead>
+                <tr>
+                    <th>ID</th>
+                    <th>Código</th>
+                    <th>Nome</th>
+                    <th>Professor</th>
+                    <th>Ações</th>
+                </tr>
+            </thead>
+            <tbody id="table-disciplinas">
+
+            </tbody>
+        </table>
+    </div>
+
+    <div class="modal fade" id="addDisciplinaModal" tabindex="-1" aria-labelledby="addDisciplinaModalLabel"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="addDisciplinaModalLabel">Adicionar Disciplina</h5>
                 </div>
+                <form id="form-add-disciplina">
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="codigo-disciplina">Código:</label>
+                            <select class="form-control" id="codigo-disciplina" onchange="preencherNomeDisciplina()"
+                                required></select>
+                        </div>
+                        <div class="form-group visually-hidden">
+                            <label for="nome-disciplina">Nome:</label>
+                            <input type="text" class="form-control" id="nome-disciplina">
+                        </div>
+                        <div class="form-group">
+                            <label for="professor-disciplina">Professor:</label>
+                            <select class="form-control" id="professor-disciplina" required>
+                            </select>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+                        <button type="button" class="btn btn-primary" onclick="adicionarDisciplina()">Adicionar</button>
+                    </div>
+                </form>
             </div>
-            <div class="col-2">
-                <select class="form-select rounded border border-dark m-1 p-2" aria-label="Default select example">
-                    <option selected>Perfil</option>
-                    <option value="1">Administração</option>
-                    <option value="2">Professor</option>
-                    <option value="3">Alunos</option>
-                </select>
-                <div class="d-flex mt-5 justify-content-end">
-                    <input class="btn btn-primary" type="submit" value="Salvar">
-                </div>
-            </div>
-    </section>
-    <section>
-        <div class="d-flex justify-content-end container">
-            <a class="btn btn-primary mt-5" href="#" role="button">Next</a>
         </div>
-    </section>
+    </div>
 
     <footer class="bg-primary fixed-bottom">
         <div class="container">
             <p class="text-center mt-3 text-light">© 2024 Company, Inc, By Puc Chek</p>
         </div>
     </footer>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js"
-        integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r"
-        crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
-        integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
-        crossorigin="anonymous"></script>
+
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="../../assets/js/disciplinas.js"></script>
 </body>
 
 </html>
