Corrigido o link que redireciona para proximas telas

--- a/codigo/pages/adm/cadastro_pessoas.html
+++ b/codigo/pages/adm/cadastro_pessoas.html
@@ -80,7 +80,7 @@
     </section>
     <section>
         <div class="d-flex justify-content-end container">
-            <a class="btn btn-primary mt-5" href="#" role="button">Next</a>
+            <a class="btn btn-primary mt-5" href="cadastro_disciplina.html" role="button">Next</a>
         </div>
     </section>
 
