--- a/codigo/pages/adm/cadastro_aulas.html
+++ b/codigo/pages/adm/cadastro_aulas.html
@@ -77,9 +77,9 @@
         </div>
     </section>
     <section>
-        <div class="d-flex justify-content-end container">
+        <!-- <div class="d-flex justify-content-end container">
             <a class="btn btn-primary mt-5" href="#" role="button">Next</a>
-        </div>
+        </div> ACHO Q NAO SERA NECESSARIO TER POIS A PROXIMA TELA SO SERIA DE LISTAGEM -->
     </section>
     </div>
     </section>
