--- a/codigo/pages/adm/cadastro_disciplina.html
+++ b/codigo/pages/adm/cadastro_disciplina.html
@@ -69,7 +69,7 @@
     </section>
     <section>
         <div class="d-flex justify-content-end container">
-            <a class="btn btn-primary mt-5" href="#" role="button">Next</a>
+            <a class="btn btn-primary mt-5" href="cadastro_turma.html" role="button">Next</a>
         </div>
     </section>
     <footer class="bg-primary fixed-bottom">
