--- a/codigo/pages/adm/cadastro_turma.html
+++ b/codigo/pages/adm/cadastro_turma.html
@@ -107,7 +107,7 @@
                 <input class="btn btn-primary" type="submit" value="Salvar">
             </div>
             <div class="d-flex justify-content-end container">
-                <a class="btn btn-primary mt-5" href="#" role="button">Next</a>
+                <a class="btn btn-primary mt-5" href="cadastro_aulas.html" role="button">Next</a>
             </div>
         </div>
     </section>
