--- a/codigo/index.html
+++ b/codigo/index.html
@@ -29,13 +29,13 @@
                     <div class="form-group">
                         <input type="password" id="senha" placeholder="Senha" required>
                         <select class="form-select" id="perfil" required>
-                            <option>-= Perfil =-</option>
+                            <option value="0">-= Perfil =-</option>
                             <option value="1">Administração</option>
                             <option value="2">Professor</option>
                             <option value="3">Alunos</option>
                         </select>
                     </div>
-                    <button type="submit" value="submit">Entrar</button>
+                    <button type="submit">Entrar</button>
                 </form>
             </div>
         </div>
@@ -44,9 +44,11 @@
     <script src="assets/json/adm.js"></script>
     <script src="assets/json/alunos.js"></script>
     <script src="assets/json/professores.js"></script>
-    <script src="assets/js/index.js">
-        document.getElementById ('login-usuario').addEventListener('submit', loginUser);
+    <script src="assets/js/index.js"></script>
+    <script>        
+        document.getElementById('login-usuario').addEventListener('submit', loginUser);
     </script>
+    <script>redirectIfLogged()</script>
 </body>
 
 </html>
