--- a/codigo/pages/adm/cadastro_pessoas.html
+++ b/codigo/pages/adm/cadastro_pessoas.html
@@ -8,6 +8,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="../../assets/js/index.js"></script>
 </head>
 
 <body>
@@ -44,8 +45,9 @@
                         <li class="nav-item">
                             <a class="nav-link active text-light" href="listagem_disciplinas.html">Disciplina</a>
                         </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="#">Sair <i
+                        <li class="nav-item" onclick="logoutUser()">
+                            <a class="nav-link active text-light" href="#">Sair
+                                <i
                                     class="bi bi-box-arrow-right"></i></a>
                         </li>
                     </ul>
@@ -98,6 +100,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js"
         integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy"
         crossorigin="anonymous"></script>
+    <script src="../../assets/js/cadastro_pessoas.js"></script>
 </body>
 
 </html>
