Ajuste fluxo de login e estruturação geral do projeto

--- a/codigo/pages/adm/cadastro_pessoas.html
+++ b/codigo/pages/adm/cadastro_pessoas.html
@@ -26,8 +26,13 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active text-light" aria-current="page"
-                                href="cadastro_disciplina.html">Cadastro de Disciplina</a>
+                            <a class="nav-link active text-light" href="listagem_alunos.html">Lista Alunos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-light" href="listagem_professores.html">Lista Professor</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-light" href="listagem_disciplinas.html">Cadastro de Disciplina</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active text-light" aria-current="page"
@@ -35,15 +40,6 @@
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active text-light" href="cadastro_aulas.html">Cadastro de Aula</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="listagem_alunos.html">Lista Alunos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="listagem_professores.html">Lista Professor</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="listagem_disciplinas.html">Disciplina</a>
                         </li>
                         <li class="nav-item" onclick="logoutUser()">
                             <a class="nav-link active text-light" href="#">Sair
@@ -79,6 +75,7 @@
                     <input class="btn btn-primary" type="submit" value="Salvar">
                 </div>
             </div>
+        </div>
     </section>
     <section>
         <div class="d-flex justify-content-end container">
