--- a/codigo/pages/adm/listagem_disciplinas.html
+++ b/codigo/pages/adm/listagem_disciplinas.html
@@ -8,9 +8,10 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.3/font/bootstrap-icons.min.css">
+    <script src="../../assets/js/index.js"></script>
 </head>
 
-<body onload="listaProfessores()">
+<body onload="listarDisciplinas()">
     <header>
         <nav class="navbar navbar-expand-lg bg-primary">
             <div class="container">
@@ -25,8 +26,13 @@
                 <div class="collapse navbar-collapse justify-content-end" id="navbarNav">
                     <ul class="navbar-nav">
                         <li class="nav-item">
-                            <a class="nav-link active text-light" aria-current="page"
-                                href="cadastro_disciplina.html">Cadastro de Disciplina</a>
+                            <a class="nav-link active text-light" href="listagem_alunos.html">Lista Alunos</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-light" href="listagem_professores.html">Lista Professor</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-light" href="listagem_disciplinas.html">Cadastro de Disciplina</a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link active text-light" aria-current="page"
@@ -36,16 +42,7 @@
                             <a class="nav-link active text-light" href="cadastro_aulas.html">Cadastro de Aula</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link active text-light" href="listagem_alunos.html">Lista Alunos</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="listagem_professores.html">Lista Professor</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="listagem_disciplinas.html">Disciplina</a>
-                        </li>
-                        <li class="nav-item">
-                            <a class="nav-link active text-light" href="#">Sair <i
+                            <a class="nav-link active text-light" href="#" onclick="logoutUser()">Sair <i
                                     class="bi bi-box-arrow-right"></i></a>
                         </li>
                     </ul>
@@ -64,7 +61,6 @@
                     <th>ID</th>
                     <th>Código</th>
                     <th>Nome</th>
-                    <th>Professor</th>
                     <th>Ações</th>
                 </tr>
             </thead>
@@ -81,26 +77,50 @@
                 <div class="modal-header">
                     <h5 class="modal-title" id="addDisciplinaModalLabel">Adicionar Disciplina</h5>
                 </div>
-                <form id="form-add-disciplina">
+                <form id="form-add-disciplina" onsubmit="adicionarDisciplina()">
                     <div class="modal-body">
                         <div class="form-group">
                             <label for="codigo-disciplina">Código:</label>
-                            <select class="form-control" id="codigo-disciplina" onchange="preencherNomeDisciplina()"
-                                required></select>
-                        </div>
-                        <div class="form-group visually-hidden">
-                            <label for="nome-disciplina">Nome:</label>
-                            <input type="text" class="form-control" id="nome-disciplina">
+                            <input type="text" class="form-control" id="codigo-disciplina" required>
                         </div>
                         <div class="form-group">
-                            <label for="professor-disciplina">Professor:</label>
-                            <select class="form-control" id="professor-disciplina" required>
-                            </select>
+                            <label for="nome-disciplina">Nome:</label>
+                            <input type="text" class="form-control" id="nome-disciplina" required>
                         </div>
                     </div>
                     <div class="modal-footer">
                         <button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
                         <button type="button" class="btn btn-primary" onclick="adicionarDisciplina()">Adicionar</button>
+                    </div>
+                </form>
+            </div>
+        </div>
+    </div>
+
+    <div class="modal fade" id="editDisciplinaModal" tabindex="-1" aria-labelledby="editDisciplinaModal"
+        aria-hidden="true">
+        <div class="modal-dialog">
+            <div class="modal-content">
+                <div class="modal-header">
+                    <h5 class="modal-title" id="editDisciplinaModalLabel">Editar Disciplina</h5>
+                </div>
+                <form id="form-edit-disciplina" onsubmit="editarDisciplina()">
+                    <div class="modal-body">
+                        <div class="form-group">
+                            <label for="edit-id-disciplina">ID:</label>
+                            <input type="text" class="form-control" id="edit-id-disciplina" required readonly>
+                        </div>
+                        <div class="form-group">
+                            <label for="edit-codigo-disciplina">Código:</label>
+                            <input type="text" class="form-control" id="edit-codigo-disciplina" required>
+                        </div>
+                        <div class="form-group">
+                            <label for="edit-nome-disciplina">Nome:</label>
+                            <input type="text" class="form-control" id="edit-nome-disciplina" required>
+                        </div>
+                    </div>
+                    <div class="modal-footer">
+                        <button type="submit" class="btn btn-primary">Salvar Alterações</button>
                     </div>
                 </form>
             </div>
@@ -116,6 +136,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.8/dist/umd/popper.min.js" integrity="sha384-I7E8VVD/ismYTF4hNIPjVp/Zjvgyol6VFvRkX/vR+Vc4jQkC+hVqc2pM8ODewa9r" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.min.js" integrity="sha384-0pUGZvbkm6XF6gxjEnlmuGrJXVbNuzT9qBBavbLwCsOGabYfZo0T0to5eqruptLy" crossorigin="anonymous"></script>
+    <script src="../../assets/json/disciplinas.js"></script>
     <script src="../../assets/js/disciplinas.js"></script>
 </body>
 
