Inclui horario e validacao nas aulas e ajusta inclusao de disciplinas

--- a/codigo/pages/adm/cadastro_aulas.html
+++ b/codigo/pages/adm/cadastro_aulas.html
@@ -82,6 +82,13 @@
                 <label for="dataTermino" class="form-label">Data de Término</label>
                 <input type="date" class="form-control" id="dataTermino" required>
             </div>
+            <div class="mb-3">
+                <label for="horario" class="form-label">Horário</label>
+                <select class="form-control" id="horario" required>
+                    <option value="1">19h00 - 20h40</option>
+                    <option value="2">20h50 - 22h30</option>
+                </select>
+            </div>
             <button type="submit" class="btn btn-primary">Cadastrar</button>
         </form>
     </main>
